# soundbrain3

./: .cursorignore  .gitignore  README.md  app.py  config.py  download_nltk_data.py  models.py  pyproject.toml  requirements.txt  sample_payload.json  setup.py  summarization.py  summarization_handler.py  summarySchedule.md
Docs/: GoogleAuth.md  dbdetails.md  log.md
static/js/: app.js  settingsModal.js  userDropdown.js
templates/: admin.html  admin2.html  login.html  set_uid.html
